# passwault

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  README.md  diagram.md  docker-compose.yml  main.py  passwault.spec  pyproject.toml
.github/workflows/: python-package.yml
docker/backup/scripts/: backup.sh  entrypoint.sh
docker/postgres/init/: 01-init.sql
imagepass/: __main__.py  embedder.py  encoder.py
imagepass/utils/: handle_message.py  image_handler.py  maths.py  utils.py  verifier.py
passwault/: __main__.py
passwault/core/: cli.py  config.py  models.py
passwault/core/commands/: authenticator.py  password.py
passwault/core/database/: migrations.py  models.py  password_manager.py  user_repository.py
passwault/core/services/: __init__.py  backup_service.py  crypto_service.py  migration_service.py
passwault/core/utils/: app_context.py  clipboard.py  data_dir.py  database.py  decorators.py  file_handler.py  local_types.py  logger.py  password.py  session_manager.py  user_repository.py
passwault/imagepass/: __main__.py  config.py  embedder.py  struct.py
passwault/imagepass/utils/: handle_message.py  image_handler.py  utils.py  verifier.py
portable/: run.bat  run.sh
scripts/: migrate_to_postgres.py
src/passwault/: __main__.py
src/passwault/core/: cli.py
src/passwault/core/commands/: authenticator.py  password.py
src/passwault/imagepass/: __main__.py  embedder.py
tests/: test_authenticator.py  test_backup_service.py  test_cli.py  test_config.py  test_crypto_service.py  test_database.py  test_decorators.py  test_embedder.py  test_migration_service.py  test_migrations.py  test_models.py  test_password_commands.py  test_password_helper.py  test_password_ops.py  test_password_repository.py  test_session_manager.py  test_user_repository.py
tests/imagepass/: conftest.py  test_embedder.py  test_functional.py  test_image_handler.py
vault/core/: authenticator.py  cli.py  login.py  password_ops.py
vault/core/utils/: database.py
(+9 files in other folders)
