[tool.poetry]
name = "passwault"
version = "0.1.0"
description = "An encoder/decoder of passwords to images using steganography"
authors = ["Pedro Ribeiro <pedromr21@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "passwault", from = "src"}]

[tool.black]
line-length = 150
skip-string-normalization = true

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "W503", "E501"]
exclude = ["venv", ".venv", "build", "dist"]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
numpy = "^2.1.1"
bcrypt = "^4.2.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"
flake8 = "^7.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
